{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 91,
  "lineage": "74c99845-e086-fb11-8819-42d06b799156",
  "resources": [
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:security-group/sg-01a38d1fffcb9c705",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-01a38d1fffcb9c705",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce2909cfa0c760ac"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-TWS-EKS-cluster-cluster-2025072910352585010000000e",
            "name_prefix": "my-TWS-EKS-cluster-cluster-",
            "owner_id": "149536475766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-TWS-EKS-cluster-cluster"
            },
            "tags_all": {
              "Name": "my-TWS-EKS-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:security-group/sg-0ce2909cfa0c760ac",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce2909cfa0c760ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a38d1fffcb9c705"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a38d1fffcb9c705"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a38d1fffcb9c705"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a38d1fffcb9c705"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a38d1fffcb9c705"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a38d1fffcb9c705"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "my-TWS-EKS-cluster-node-2025072910352631560000000f",
            "name_prefix": "my-TWS-EKS-cluster-node-",
            "owner_id": "149536475766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-TWS-EKS-cluster-node",
              "kubernetes.io/cluster/my-TWS-EKS-cluster": "owned"
            },
            "tags_all": {
              "Name": "my-TWS-EKS-cluster-node",
              "kubernetes.io/cluster/my-TWS-EKS-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4208967064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a38d1fffcb9c705",
            "security_group_rule_id": "sgr-05fa597dae9e559d9",
            "self": false,
            "source_security_group_id": "sg-0ce2909cfa0c760ac",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1283507051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-053e5735f033305af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4174966136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-060c43e07f492e7f9",
            "self": false,
            "source_security_group_id": "sg-01a38d1fffcb9c705",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2904798104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-0670ea42f6a83f1c9",
            "self": false,
            "source_security_group_id": "sg-01a38d1fffcb9c705",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1684132878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-08f0c6ae06b8b5f0e",
            "self": false,
            "source_security_group_id": "sg-01a38d1fffcb9c705",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2000545839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-0c4eaa4f04f1d34a6",
            "self": false,
            "source_security_group_id": "sg-01a38d1fffcb9c705",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-329047012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-0047dbfb9ed81bb64",
            "self": false,
            "source_security_group_id": "sg-01a38d1fffcb9c705",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3303587570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-08cff279f85c45a86",
            "self": false,
            "source_security_group_id": "sg-01a38d1fffcb9c705",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3007491788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-0855777dee7bc8a5e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-71309829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-0966fae6f296d159b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2686433770",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ce2909cfa0c760ac",
            "security_group_rule_id": "sgr-08b0e79b369936e46",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:network-acl/acl-02a73ae19146d1a1f",
            "default_network_acl_id": "acl-02a73ae19146d1a1f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02a73ae19146d1a1f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "149536475766",
            "subnet_ids": [
              "subnet-004a753bc27d21953",
              "subnet-023951d16ae30c954",
              "subnet-05d58ab5b214bb45d",
              "subnet-05e7e164c75750bd1",
              "subnet-081e2fc05010943b4",
              "subnet-09a65e91cf2f7f934"
            ],
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:route-table/rtb-066c044d2c018fb09",
            "default_route_table_id": "rtb-066c044d2c018fb09",
            "id": "rtb-066c044d2c018fb09",
            "owner_id": "149536475766",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:security-group/sg-0271703585f9ea4f1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0271703585f9ea4f1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "149536475766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062a65fbd72011813",
            "arn": "arn:aws:ec2:ap-south-1:149536475766:elastic-ip/eipalloc-062a65fbd72011813",
            "association_id": "eipassoc-0579683d7e80227c0",
            "domain": "vpc",
            "id": "eipalloc-062a65fbd72011813",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-083a13e85b7b2ec6f",
            "private_dns": "ip-10-0-101-142.ap-south-1.compute.internal",
            "private_ip": "10.0.101.142",
            "public_dns": "ec2-13-235-149-117.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.149.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bd0e61864784eb7",
            "arn": "arn:aws:ec2:ap-south-1:149536475766:elastic-ip/eipalloc-00bd0e61864784eb7",
            "association_id": "eipassoc-01e1ca89e77b6dac3",
            "domain": "vpc",
            "id": "eipalloc-00bd0e61864784eb7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02c30fc3f0bc9c12f",
            "private_dns": "ip-10-0-102-193.ap-south-1.compute.internal",
            "private_ip": "10.0.102.193",
            "public_dns": "ec2-13-203-129-211.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.129.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006185f768e393535",
            "arn": "arn:aws:ec2:ap-south-1:149536475766:elastic-ip/eipalloc-006185f768e393535",
            "association_id": "eipassoc-0f3814dccafac02a6",
            "domain": "vpc",
            "id": "eipalloc-006185f768e393535",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-000d7267dd3c9a9dd",
            "private_dns": "ip-10-0-103-162.ap-south-1.compute.internal",
            "private_ip": "10.0.103.162",
            "public_dns": "ec2-3-111-241-243.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.241.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:internet-gateway/igw-0b2c288d01528bd02",
            "id": "igw-0b2c288d01528bd02",
            "owner_id": "149536475766",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062a65fbd72011813",
            "association_id": "eipassoc-0579683d7e80227c0",
            "connectivity_type": "public",
            "id": "nat-06002675c76a42258",
            "network_interface_id": "eni-083a13e85b7b2ec6f",
            "private_ip": "10.0.101.142",
            "public_ip": "13.235.149.117",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a65e91cf2f7f934",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bd0e61864784eb7",
            "association_id": "eipassoc-01e1ca89e77b6dac3",
            "connectivity_type": "public",
            "id": "nat-09f5add5bcd5a0f32",
            "network_interface_id": "eni-02c30fc3f0bc9c12f",
            "private_ip": "10.0.102.193",
            "public_ip": "13.203.129.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-081e2fc05010943b4",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006185f768e393535",
            "association_id": "eipassoc-0f3814dccafac02a6",
            "connectivity_type": "public",
            "id": "nat-0d8f50b1dd6ce6fe8",
            "network_interface_id": "eni-000d7267dd3c9a9dd",
            "private_ip": "10.0.103.162",
            "public_ip": "3.111.241.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-023951d16ae30c954",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-ap-south-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d918f4234fe4d0401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06002675c76a42258",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d918f4234fe4d040",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ffd6e479609e4551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f5add5bcd5a0f32",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ffd6e479609e455",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c5e082e99dad330b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d8f50b1dd6ce6fe8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5e082e99dad330b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2c288d01528bd02",
            "id": "r-rtb-0429006127093018a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0429006127093018a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:route-table/rtb-0d918f4234fe4d040",
            "id": "rtb-0d918f4234fe4d040",
            "owner_id": "149536475766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06002675c76a42258",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:route-table/rtb-03ffd6e479609e455",
            "id": "rtb-03ffd6e479609e455",
            "owner_id": "149536475766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f5add5bcd5a0f32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:route-table/rtb-0c5e082e99dad330b",
            "id": "rtb-0c5e082e99dad330b",
            "owner_id": "149536475766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8f50b1dd6ce6fe8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:route-table/rtb-0429006127093018a",
            "id": "rtb-0429006127093018a",
            "owner_id": "149536475766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2c288d01528bd02",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b7e8f9ddeed21c8",
            "route_table_id": "rtb-0d918f4234fe4d040",
            "subnet_id": "subnet-05e7e164c75750bd1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fca7b37468693b8",
            "route_table_id": "rtb-03ffd6e479609e455",
            "subnet_id": "subnet-05d58ab5b214bb45d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043d2e979f39ee6a2",
            "route_table_id": "rtb-0c5e082e99dad330b",
            "subnet_id": "subnet-004a753bc27d21953"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c435267a49502a71",
            "route_table_id": "rtb-0429006127093018a",
            "subnet_id": "subnet-09a65e91cf2f7f934"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab04f8a343a61fb",
            "route_table_id": "rtb-0429006127093018a",
            "subnet_id": "subnet-081e2fc05010943b4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080c17b3ede6500ec",
            "route_table_id": "rtb-0429006127093018a",
            "subnet_id": "subnet-023951d16ae30c954"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:subnet/subnet-05e7e164c75750bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e7e164c75750bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536475766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:subnet/subnet-05d58ab5b214bb45d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d58ab5b214bb45d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536475766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:subnet/subnet-004a753bc27d21953",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004a753bc27d21953",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536475766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:subnet/subnet-09a65e91cf2f7f934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a65e91cf2f7f934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536475766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:subnet/subnet-081e2fc05010943b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081e2fc05010943b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536475766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:subnet/subnet-023951d16ae30c954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023951d16ae30c954",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536475766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster-public-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00ed5751bb07b9f01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:149536475766:vpc/vpc-00ed5751bb07b9f01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a73ae19146d1a1f",
            "default_route_table_id": "rtb-066c044d2c018fb09",
            "default_security_group_id": "sg-0271703585f9ea4f1",
            "dhcp_options_id": "dopt-074e402e1043c4a74",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ed5751bb07b9f01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066c044d2c018fb09",
            "owner_id": "149536475766",
            "tags": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "my-TWS-EKS-cluster",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}